--- a/Username.html
+++ b/Username.html
@@ -7,7 +7,7 @@
 <!--This is how a comment is made in HTML.-->
     <h1>Welcome to Sylvia's html practice page!</h1>
         <p>
-            "This is my first HTML practice page. Here, I will be learning html using some basic tags!"
+            This is my first HTML practice page. Here, I will be learning html using some basic tags!
         </p>
     <h3>Notes</h3>
         <p>
