--- a/Username.html
+++ b/Username.html
@@ -11,7 +11,7 @@
         </p>
     <h3>Notes</h3>
         <p>
-            "Although this may seem easy, always make sure you indent and organize your code well! Otherwise, everything will be cluttered..."
+            Although this may seem easy, always make sure you indent and organize your code well! Otherwise, everything will be cluttered...
         </p>
     <hr>
 <!--This section is for practicing html tags.-->
