--- a/Username.html
+++ b/Username.html
@@ -18,46 +18,42 @@
     <h1>Basic Intro to HTML</h1>
     <h2>Creating Paragraphs</h2>
     <p>
-        "In order to create a body for a paragraph, you should use p and put your sentences in quotes before ending the line with /p.
-        By doing so, this is how you create your first paragraph!"
+        In order to create a body for a paragraph, you should use p and end the sentence with /p. By doing so, this is how you create your first paragraph!"
     </p>
 <!--How to use dividers-->
     <h2>Using Dividers</h2>
         <div>
-            "When using div and ending your code with /div it leaves your sentences and paragraphs 
-            with no spaces above or below, making your text squished." 
+            When using div and ending your code with /div it leaves your sentences and paragraphs with no spaces above or below, making your text squished.
             <br>
-            "It may seem indifferent to making paragraphs
-            since they are similar to each other. However, if you pay close attention to how the text is cluttered, you'll notice it."
+            It may seem indifferent to making paragraphs since they are similar to each other. However, if you pay close attention to how the text is cluttered, you'll notice it.
         </div>
 <!--Using the Span Tag-->
     <h2>Using the Span Tag</h2>
         <p>
-            "By using the span tag, you can style your words and change the font of them. For example:
-            I like the color <span style="color:plum">plum</span> a lot!"
+            By using the span tag, you can style your words and change the font of them. For example:
+            I like the color <span style="color:plum">plum</span> a lot!
         </p>
 <!--How to use Line Breaks-->
     <h2>Implementing Line Breaks</h2>
         <p>
-            "Let's say we're making a long paragraph and you want to make a sentence go onto the next line.
-            By doing so, we use the <br>, which means to "break" a line."
+            Let's say we're making a long paragraph and you want to make a sentence go onto the next line. By doing so, we use the tag br, which means to "break" a line.
             <br>
-            "This is an example of it!"
+            This is an example of it!
         </p>
 <!--How to Emphasize Text-->
     <h2>Emphasizing Text</h2>
         <p>
-            "Being able to emphasize text is nice. By being able to do so, I can use b to bold important text like <b>this</b> or use <strong>strong</strong> instead. I could  also
-            create italic text by using i like <i>this</i>"
+            Being able to emphasize text is nice. By being able to do so, I can use b to bold important text like <b>this</b> or use <strong>strong</strong> instead. I could  also
+            create italic text by using i like <i>this</i>
         </p>
 <!--How to create a table-->
 <h2>Creating A Table</h2>
         <p>
-            "Creating a table may seem intimidating but you can create a table by using
-            a td tag (The data cell of a table) or by using the tr tag (the rows in a table)"
+            Creating a table may seem intimidating but you can create a table by using
+            a td tag (The data cell of a table) or by using the tr tag (the rows in a table)
             <br>
             <p>
-                "Here is an example of a table below."
+                Here is an example of a table below.
             </p>
         </p> 
         <!--Creating the body of a table-->
@@ -72,27 +68,26 @@
                 <!--Colspan refers to the number of colomns in a table-->
                 <td colspan="2">
                     <p>
-                        "This is the top half of the table"
+                        This is the top half of the table
                     </p>
                 </td>
             </tr>
             <tr>
                 <p>
-                    "This is the bottom half of the table"
+                    This is the bottom half of the table
                 </p>
             </tr>
         </tbody>
     <h3>Notes</h3>
         <p>
-            "Above is a great example of indentation and commenting. If I were to unindent/delete comments for my code for the able above then I could've been easily 
-            gotten confused while writing my code"
+            Above is a great example of indentation and commenting. If I were to unindent/delete comments for my code for the able above then I could've been easily 
+            gotten confused while writing my code
         </p>
 <hr>
 <!--Go back and insert team page below later when the page is created.-->
         <h1>Team Project Page</h1>
         <p>
-            "Here is my" <a href="Sylviale101.github.io">Github Class Repository</a>
-            " for you to check out"
+            Here is my <a href="Sylviale101.github.io">Github Class Repository</a> for you to check out!
         </p>
         <a href="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large">
             <img alt="Feeling Comfy" src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large"
