--- a/Username.html
+++ b/Username.html
@@ -57,6 +57,7 @@
             </p>
         </p> 
         <!--Creating the body of a table-->
+        <table border="1" width = "500">
         <tbody>
             <!--Creating rows for a table-->
             <tr>
@@ -78,6 +79,7 @@
                 </p>
             </tr>
         </tbody>
+    </table>
     <h3>Notes</h3>
         <p>
             Above is a great example of indentation and commenting. If I were to unindent/delete comments for my code for the able above then I could've been easily 
