--- a/Username.html
+++ b/Username.html
@@ -74,9 +74,11 @@
                 </td>
             </tr>
             <tr>
-                <p>
-                    This is the bottom half of the table
-                </p>
+                <td colspan="2">
+                    <p>
+                     This is the bottom half of the table
+                    </p>
+                </td>
             </tr>
         </tbody>
     </table>
