--- a/Username.html
+++ b/Username.html
@@ -88,14 +88,11 @@
             gotten confused while writing my code
         </p>
 <hr>
-<!--Go back and insert team page below later when the page is created.-->
+        <!--Go back and insert team page below later when the page is created.-->
         <h1>Team Project Page</h1>
         <p>
             Here is my <a href="Sylviale101.github.io">Github Class Repository</a> for you to check out!
         </p>
-        <a href="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large">
-            <img alt="Feeling Comfy" src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large"
-            width="10" height="20">
-        </a>
+        <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large" width="500" alt="Feeling Comfy" title="Comfy!"
     </body>
 </html>
