--- a/Username.html
+++ b/Username.html
@@ -93,6 +93,6 @@
         <p>
             Here is my <a href="Sylviale101.github.io">Github Class Repository</a> for you to check out!
         </p>
-        <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large" width="500" alt="Feeling Comfy" title="Comfy!"
+        <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large" width="500" alt="Feeling Comfy" title="Comfy!">
     </body>
 </html>
