--- a/Username.html
+++ b/Username.html
@@ -18,7 +18,7 @@
     <h1>Basic Intro to HTML</h1>
     <h2>Creating Paragraphs</h2>
     <p>
-        In order to create a body for a paragraph, you should use p and end the sentence with /p. By doing so, this is how you create your first paragraph!"
+        In order to create a body for a paragraph, you should use p and end the sentence with /p. By doing so, this is how you create your first paragraph!
     </p>
 <!--How to use dividers-->
     <h2>Using Dividers</h2>
@@ -49,8 +49,8 @@
 <!--How to create a table-->
 <h2>Creating A Table</h2>
         <p>
-            Creating a table may seem intimidating but you can create a table by using
-            a td tag (The data cell of a table) or by using the tr tag (the rows in a table)
+            Creating a table may seem intimidating but you can create a table by 
+            using a td tag (The data cell of a table) or by using the tr tag (the rows in a table)
             <br>
             <p>
                 Here is an example of a table below.
@@ -90,9 +90,11 @@
 <hr>
         <!--Go back and insert team page below later when the page is created.-->
         <h1>Team Project Page</h1>
-        <p>
-            Here is my <a href="Sylviale101.github.io">Github Class Repository</a> for you to check out!
-        </p>
-        <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large" width="500" alt="Feeling Comfy" title="Comfy!">
+        <!--Adding an Image-->
+        <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large" width="500" alt="Feeling Comfy" title="Feeling Comfy! Credits to Sayao">
+            <p>
+                <!--Hyperlinking a text-->
+                Image Credits to <a href="https://twitter.com/sysysuyao?t=zgbOs_RJKtz9_37Cm1ddLg&s=09">Suyao</a>!
+            </p>
     </body>
 </html>
