--- a/Username.html
+++ b/Username.html
@@ -90,6 +90,9 @@
 <hr>
         <!--Go back and insert team page below later when the page is created.-->
         <h1>Team Project Page</h1>
+            <p>
+                Here is a link to my Project page: <a href="https://github.com/Sylviale101/Sylviale101.github.io">Github Repositoy</a>
+            </p>
         <!--Adding an Image-->
         <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large" width="500" alt="Feeling Comfy" title="Feeling Comfy! Credits to Sayao">
             <p>
