Changes 5.5 - Added Credits

--- a/Username.html
+++ b/Username.html
@@ -93,11 +93,14 @@
             <p>
                 Here is a link to my Project page: <a href="https://github.com/Sylviale101/Sylviale101.github.io">Github Repositoy</a>
             </p>
+<hr>
         <!--Adding an Image-->
         <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large" width="500" alt="Feeling Comfy" title="Feeling Comfy! Credits to Sayao">
+        <h2>Credits</h2>
             <p>
                 <!--Hyperlinking a text-->
-                Image Credits to <a href="https://twitter.com/sysysuyao?t=zgbOs_RJKtz9_37Cm1ddLg&s=09">Suyao</a>!
+                Image Credits to: <a href="https://twitter.com/sysysuyao?t=zgbOs_RJKtz9_37Cm1ddLg&s=09">Suyao</a>!
+                Code Reference Credits to: Mark Chen
             </p>
     </body>
 </html>
