--- a/Username.html
+++ b/Username.html
@@ -44,7 +44,7 @@
     <h2>Emphasizing Text</h2>
         <p>
             Being able to emphasize text is nice. By being able to do so, I can use b to bold important text like <b>this</b> or use <strong>strong</strong> instead. I could  also
-            create italic text by using i like <i>this</i>
+            create italic text by using an i tag like <i>this</i>
         </p>
 <!--How to create a table-->
 <h2>Creating A Table</h2>
@@ -84,7 +84,7 @@
         </table>
     <h3>Notes</h3>
         <p>
-            Above is a great example of indentation and commenting. If I were to unindent/delete comments for my code for the able above then I could've been easily 
+            Indentation and commenting while coding is an important habit to have. If I were to unindent/delete comments for my code for the able above then I could've been easily 
             gotten confused while writing my code
         </p>
 <hr>
