--- a/Username.html
+++ b/Username.html
@@ -84,8 +84,8 @@
         </table>
     <h3>Notes</h3>
         <p>
-            Indentation and commenting while coding is an important habit to have. If I were to unindent/delete comments for my code for the able above then I could've been easily 
-            gotten confused while writing my code
+            Indentation, consistantly saving and commenting while coding is an important habit to have. If I were to unindent/delete comments for my code for the able above then I could've been easily 
+            gotten confused while writing my code, and I could've lost some of my code if something were to happen.
         </p>
 <hr>
         <!--Go back and insert team page below later when the page is created.-->
@@ -95,14 +95,14 @@
             </p>
 <hr>
         <!--Adding an Image-->
-        <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large" width="500" alt="Feeling Comfy" title="Feeling Comfy! Credits to Sayao">
+            <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large" width="500" alt="Feeling Comfy" title="Feeling Comfy! Credits to Sayao">
         <h2>Credits</h2>
-            <p>
-                <!--Hyperlinking a text-->
-                Image Credits to: <a href="https://twitter.com/sysysuyao?t=zgbOs_RJKtz9_37Cm1ddLg&s=09">Suyao</a>!
-            </p>
-            <p>
-                Code Reference Credits to: <a href="https://github.com/markdangerchen">Mark Chen</a>!
-            </p>
+                <p>
+                    <!--Hyperlinking a text-->
+                    Image Credits to: <a href="https://twitter.com/sysysuyao?t=zgbOs_RJKtz9_37Cm1ddLg&s=09">Suyao</a>!
+                </p>
+                <p>
+                    Code Reference Credits to: <a href="https://github.com/markdangerchen">Mark Chen</a>!
+                </p>
     </body>
 </html>
