--- a/Username.html
+++ b/Username.html
@@ -53,7 +53,7 @@
             using a td tag (The data cell of a table) or by using the tr tag (the rows in a table)
             <br>
             <p>
-                Here is an example of a table below.
+                <b>Here is an example of a table below.</b>
             </p>
         </p> 
         <!--Creating the body of a table-->
