--- a/Username.html
+++ b/Username.html
@@ -5,7 +5,7 @@
     <title>HTML practice page</title>
 </head>
 <!--This is how a comment is made in HTML.-->
-    <h1>Welcome to Sylvia's html practice page!</h1>
+    <h1>Welcome to Sylvia's HTML practice page!</h1>
         <p>
             This is my first HTML practice page. Here, I will be learning html using some basic tags!
         </p>
