--- a/Username.html
+++ b/Username.html
@@ -95,7 +95,7 @@
             </p>
 <hr>
         <!--Adding an Image-->
-            <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large" width="500" alt="Feeling Comfy" title="Feeling Comfy! Credits to Sayao">
+            <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large" width="500" alt="Feeling Comfy" title="Feeling Comfy! Credits to Suyao">
         <h2>Credits</h2>
                 <p>
                     <!--Hyperlinking a text-->
