--- a/Username.html
+++ b/Username.html
@@ -82,21 +82,66 @@
                 </tr>
             </tbody>
         </table>
-    <h3>Notes</h3>
-        <p>
-            Indentation, consistantly saving and commenting while coding is an important habit to have. If I were to unindent/delete comments for my code for the able above then I could've been easily 
-            gotten confused while writing my code, and I could've lost some of my code if something were to happen.
-        </p>
+            <h2>Creating A List</h2>
+                <p>
+                    A list in HTML can be created in three different ways: Ordered (ol), Unordered (ul), and descriptive (dl).
+                </p>
+            <!--Ordered Lists are numbered-->
+            <h2>Ordered Lists</h2>
+                <p>
+                 <b>Here is an example of an ordered list below</b>
+                </p>
+                        <ol>
+                            <li>Apple Juice</li>
+                            <li>Grape Juice</li>
+                            <li>Pear Juice</li>
+                        </ol>
+            <!--Unordered lists are bullet pointed-->
+            <h2>Unordered Lists</h2>
+                <p>
+                    <b>Here is an example of a unordered list below</b>
+                    <ul>
+                            <li>Apple Juice</li>
+                            <li>Grape Juice</li>
+                            <li> Pear Juice</li>
+                    </ul>
+                </p>
+                <h3>Note</h3>
+                    <p>
+                        Unordered lists in HTML appear bulleted
+                    </p>
+            <!--Description lists provide detaied descriptions about an item within a list-->
+            <h2>Description Lists</h2>
+                <p>
+                        <dl>
+                                <dt>Apple Juice</dt>
+                                <dd>Juice Freshly pressed from apples</dd>
+                                <dt>Grape Juice</dt>
+                                <dd>Juice obtained from crushed grapes</dd>
+                                <dt>Pear Juice</dt>
+                                <dd>Fresh juice created from pears being blended with water</dd>
+                        </dl>
+                </p>
+            <h3>Note</h3>
+                <p>
+                    Description lists have <b>three</b> different tags: dl (description list), dt (defined term), and dd (the description of each term).
+                </p>
 <hr>
         <!--Go back and insert team page below later when the page is created.-->
         <h1>Team Project Page</h1>
             <p>
                 Here is a link to my Project page: <a href="https://github.com/Sylviale101/Sylviale101.github.io">Github Repositoy</a>
             </p>
+            <h3>Notes</h3>
+            <p>
+                Indentation, consistantly saving and commenting while coding is an important habit to have. If I were to unindent/delete comments for my code for the able above then I could've been easily 
+                gotten confused while writing my code, and I could've lost some of my code if something were to happen.
+            </p>
 <hr>
         <!--Adding an Image-->
-            <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large" width="500" alt="Feeling Comfy" title="Feeling Comfy! Credits to Suyao">
+             <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large" width="500" alt="Feeling Comfy" title="Feeling Comfy! Credits to Suyao">
         <h2>Credits</h2>
+            <!--Credits Section-->
                 <p>
                     <!--Hyperlinking a text-->
                     Image Credits to: <a href="https://twitter.com/sysysuyao?t=zgbOs_RJKtz9_37Cm1ddLg&s=09">Suyao</a>!
