--- a/Username.html
+++ b/Username.html
@@ -108,23 +108,24 @@
                 </p>
                 <h3>Note</h3>
                     <p>
-                        Unordered lists in HTML appear bulleted
+                        Unordered lists in HTML <b>appear bulleted</b>
                     </p>
             <!--Description lists provide detaied descriptions about an item within a list-->
             <h2>Description Lists</h2>
                 <p>
+                        <b>Here is an example of a description list below</b>
                         <dl>
-                                <dt>Apple Juice</dt>
-                                <dd>Juice Freshly pressed from apples</dd>
-                                <dt>Grape Juice</dt>
-                                <dd>Juice obtained from crushed grapes</dd>
-                                <dt>Pear Juice</dt>
-                                <dd>Fresh juice created from pears being blended with water</dd>
+                                <dt><b>Apple Juice</b></dt>
+                                <dd><i>Juice Freshly pressed from apples</i></dd>
+                                <dt><b>Grape Juice</b></dt>
+                                <dd><i>Juice obtained from crushed grapes</i></dd>
+                                <dt><b>Pear Juice</b></dt>
+                                <dd><i>Fresh juice created from pears being blended with water</i></dd>
                         </dl>
                 </p>
             <h3>Note</h3>
                 <p>
-                    Description lists have <b>three</b> different tags: dl (description list), dt (defined term), and dd (the description of each term).
+                    Description lists have <b>three</b> different tags: dl <b>(description list)</b>, dt <b>(defined term)</b>, and dd <b>(the description of each term)</b>.
                 </p>
 <hr>
         <!--Go back and insert team page below later when the page is created.-->
