--- a/Username.html
+++ b/Username.html
@@ -135,7 +135,7 @@
             </p>
             <h3>Notes</h3>
             <p>
-                Indentation, consistantly saving and commenting while coding is an important habit to have. If I were to unindent/delete comments for my code for the able above then I could've been easily 
+                Indentation, consistantly saving and commenting while coding is an important habit to have. If I were to unindent/delete comments for my code for the table above then I could've been easily 
                 gotten confused while writing my code, and I could've lost some of my code if something were to happen.
             </p>
 <hr>
@@ -145,10 +145,10 @@
             <!--Credits Section-->
                 <p>
                     <!--Hyperlinking a text-->
-                    Image Credits to: <a href="https://twitter.com/sysysuyao?t=zgbOs_RJKtz9_37Cm1ddLg&s=09">Suyao</a>!
+                    <b>Image Credits to:</b> <a href="https://twitter.com/sysysuyao?t=zgbOs_RJKtz9_37Cm1ddLg&s=09">Suyao</a>!
                 </p>
                 <p>
-                    Code Reference Credits to: <a href="https://github.com/markdangerchen">Mark Chen</a>!
+                    <b>Code Reference Credits to:</b> <a href="https://github.com/markdangerchen">Mark Chen</a>!
                 </p>
     </body>
 </html>
