--- a/Username.html
+++ b/Username.html
@@ -96,7 +96,11 @@
                             <li>Grape Juice</li>
                             <li>Pear Juice</li>
                         </ol>
-            <!--Unordered lists are bullet pointed-->
+            <h3>Note</h3>
+                        <p>
+                            Ordered Lists appear <b>numbered</b>
+                        </p>
+            <!--Unordered lists have bullet points-->
             <h2>Unordered Lists</h2>
                 <p>
                     <b>Here is an example of a unordered list below</b>
