Starting CSS page

--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+        <head>
+            <title>Sylvia's CSS Practice Page</title>
+            <!--The style tag can only have one acceptable value, which is "text/css"-->
+            <style type="text/css"></style>
+                body {
+                    background: hsla(0,100%,90%,0.3);
+                }
+        </head>
+</html>
