--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -1,11 +1,158 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
-        <head>
-            <title>Sylvia's CSS Practice Page</title>
-            <!--The style tag can only have one acceptable value, which is "text/css"-->
-            <style type="text/css"></style>
-                body {
-                    background: hsla(0,100%,90%,0.3);
-                }
-        </head>
+    <body>
+<head>
+    <title>HTML practice page</title>
+</head>
+<!--This is how a comment is made in HTML.-->
+    <h1>Welcome to Sylvia's HTML practice page!</h1>
+        <p>
+            This is my first HTML practice page. Here, I will be learning html using some basic tags!
+        </p>
+    <h3>Notes</h3>
+        <p>
+            Although this may seem easy, always make sure you indent and organize your code well! Otherwise, everything will be cluttered...
+        </p>
+    <hr>
+<!--This section is for practicing html tags.-->
+    <h1>Basic Intro to HTML</h1>
+    <h2>Creating Paragraphs</h2>
+    <p>
+        In order to create a body for a paragraph, you should use p and end the sentence with /p. By doing so, this is how you create your first paragraph!
+    </p>
+<!--How to use dividers-->
+    <h2>Using Dividers</h2>
+        <div>
+            When using div and ending your code with /div it leaves your sentences and paragraphs with no spaces above or below, making your text squished.
+            <br>
+            It may seem indifferent to making paragraphs since they are similar to each other. However, if you pay close attention to how the text is cluttered, you'll notice it.
+        </div>
+<!--Using the Span Tag-->
+    <h2>Using the Span Tag</h2>
+        <p>
+            By using the span tag, you can style your words and change the font of them. For example:
+            I like the color <span style="color:plum">plum</span> a lot!
+        </p>
+<!--How to use Line Breaks-->
+    <h2>Implementing Line Breaks</h2>
+        <p>
+            Let's say we're making a long paragraph and you want to make a sentence go onto the next line. By doing so, we use the tag br, which means to "break" a line.
+            <br>
+            This is an example of it!
+        </p>
+<!--How to Emphasize Text-->
+    <h2>Emphasizing Text</h2>
+        <p>
+            Being able to emphasize text is nice. By being able to do so, I can use b to bold important text like <b>this</b> or use <strong>strong</strong> instead. I could  also
+            create italic text by using an i tag like <i>this</i>
+        </p>
+<!--How to create a table-->
+<h2>Creating A Table</h2>
+        <p>
+            Creating a table may seem intimidating but you can create a table by 
+            using a td tag (The data cell of a table) or by using the tr tag (the rows in a table)
+            <br>
+            <p>
+                <b>Here is an example of a table below.</b>
+            </p>
+        </p> 
+        <!--Creating the body of a table-->
+        <table border="1" width= "500">
+            <tbody>
+                <!--Creating rows for a table-->
+                <tr>
+                    <!--Setting the width of a data cell to 50% and inserting text-->
+                    <td width="50%">Left side of the table</td>
+                    <td width= "50%">Right side of the table</td>
+                </tr>
+                <tr>
+                    <!--Colspan refers to the number of colomns in a table-->
+                    <td colspan="2">
+                        <p>
+                            This is the top half of the table
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <p>
+                        This is the bottom half of the table
+                        </p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+            <h2>Creating A List</h2>
+                <p>
+                    A list in HTML can be created in three different ways: Ordered (ol), Unordered (ul), and descriptive (dl).
+                </p>
+            <!--Ordered Lists are numbered-->
+            <h2>Ordered Lists</h2>
+                <p>
+                 <b>Here is an example of an ordered list below</b>
+                </p>
+                        <ol>
+                            <li>Apple Juice</li>
+                            <li>Grape Juice</li>
+                            <li>Pear Juice</li>
+                        </ol>
+            <h3>Note</h3>
+                        <p>
+                            Ordered Lists appear <b>numbered</b>
+                        </p>
+            <!--Unordered lists have bullet points-->
+            <h2>Unordered Lists</h2>
+                <p>
+                    <b>Here is an example of a unordered list below</b>
+                    <ul>
+                            <li>Apple Juice</li>
+                            <li>Grape Juice</li>
+                            <li> Pear Juice</li>
+                    </ul>
+                </p>
+                <h3>Note</h3>
+                    <p>
+                        Unordered lists in HTML <b>appear bulleted</b>
+                    </p>
+            <!--Description lists provide detaied descriptions about an item within a list-->
+            <h2>Description Lists</h2>
+                <p>
+                        <b>Here is an example of a description list below</b>
+                        <dl>
+                                <dt><b>Apple Juice</b></dt>
+                                <dd><i>Juice Freshly pressed from apples</i></dd>
+                                <dt><b>Grape Juice</b></dt>
+                                <dd><i>Juice obtained from crushed grapes</i></dd>
+                                <dt><b>Pear Juice</b></dt>
+                                <dd><i>Fresh juice created from pears being blended with water</i></dd>
+                        </dl>
+                </p>
+            <h3>Note</h3>
+                <p>
+                    Description lists have <b>three</b> different tags: dl <b>(description list)</b>, dt <b>(defined term)</b>, and dd <b>(the description of each term)</b>.
+                </p>
+<hr>
+        <!--Go back and insert team page below later when the page is created.-->
+        <h1>Team Project Page</h1>
+            <p>
+                Here is a link to my Project page: <a href="https://github.com/Sylviale101/Sylviale101.github.io">Github Repositoy</a>
+            </p>
+            <h3>Notes</h3>
+            <p>
+                Indentation, consistantly saving and commenting while coding is an important habit to have. If I were to unindent/delete comments for my code for the table above then I could've been easily 
+                gotten confused while writing my code, and I could've lost some of my code if something were to happen.
+            </p>
+<hr>
+        <!--Adding an Image-->
+             <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=large" width="500" alt="Feeling Comfy" title="Feeling Comfy! Credits to Suyao">
+        <h2>Credits</h2>
+            <!--Credits Section-->
+                <p>
+                    <!--Hyperlinking a text-->
+                    <b>Image Credits to:</b> <a href="https://twitter.com/sysysuyao?t=zgbOs_RJKtz9_37Cm1ddLg&s=09">Suyao</a>!
+                </p>
+                <p>
+                    <b>Code Reference Credits to:</b> <a href="https://github.com/markdangerchen">Mark Chen</a>!
+                </p>
+    </body>
 </html>
