--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -3,22 +3,23 @@
 <head>
     <title>HTML practice page</title>
     <!--Practicing adding backgrounds-->
-    <style type="text/css">
-        body {
-            background: hsla(320, 72%, 76%, 0.644);
-            background-image: url(https://images.unsplash.com/photo-1564951434112-64d74cc2a2d7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80);
-            background-attachment: scroll;
-            background-repeat: repeat;
-            font-family:Arial, Helvetica, sans-serif;
-        }
-        /* Adding header fonts - this is how a comment can be made*/
-          h1, h2, h3 {
-                color: black;
-                font-family: 'Times New Roman', Times, serif;
-                font-style: italic;
-                text-align:center;
-                font-weight: bold; 
+            <style type="text/css">
+                body {
+                background: hsla(320, 72%, 76%, 0.644);
+                background-image: url(https://images.unsplash.com/photo-1564951434112-64d74cc2a2d7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80);
+                background-attachment: scroll;
+                background-repeat: repeat;
+                font-family:Arial, Helvetica, sans-serif;
             }
+            /* Adding header fonts - this is how a comment can be made*/
+                h1, h2, h3 {
+                 color: black;
+                    font-family: 'Times New Roman', Times, serif;
+                    font-style: italic;
+                    text-align:center;
+                    font-weight: bold; 
+                }
+        </style>
 </head>
 <body>
 <!--This is how a comment is made in HTML.-->
