Test - Adding boxes

--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -19,7 +19,7 @@
                     text-align:center;
                     font-weight: bold; 
                 }
-        </style>
+            </style>
 </head>
 <body>
 <!--This is how a comment is made in HTML.-->
@@ -31,13 +31,16 @@
         <p>
             Although this may seem easy, always make sure you indent and organize your code well! Otherwise, everything will be cluttered...
         </p>
-    <hr>
+    <!--Playing with adding boxes-->
+    <div class="boxes">
 <!--This section is for practicing html tags.-->
-    <h1>Basic Intro to HTML</h1>
-    <h2>Creating Paragraphs</h2>
-    <p>
+        <h1>Basic Intro to HTML</h1>
+        <hr>
+        <h2>Creating Paragraphs</h2>
+        <p>
         In order to create a body for a paragraph, you should use p and end the sentence with /p. By doing so, this is how you create your first paragraph!
     </p>
+    </div>
 <!--How to use dividers-->
     <h2>Using Dividers</h2>
         <div>
