Testing adding sections + Centering text

--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -19,6 +19,10 @@
                     text-align:center;
                     font-weight: bold; 
                 }
+                /*Attempting to align text by centering them*/
+                body {
+                    text-align: center;
+                }
             </style>
 </head>
 <body>
@@ -32,15 +36,17 @@
             Although this may seem easy, always make sure you indent and organize your code well! Otherwise, everything will be cluttered...
         </p>
     <!--Playing with adding boxes-->
-    <div class="boxes">
+        <div class="boxes">
 <!--This section is for practicing html tags.-->
+        <hr>
         <h1>Basic Intro to HTML</h1>
+        <!--Playing with adding another hr-->
         <hr>
         <h2>Creating Paragraphs</h2>
         <p>
         In order to create a body for a paragraph, you should use p and end the sentence with /p. By doing so, this is how you create your first paragraph!
-    </p>
-    </div>
+        </p>
+        </div>
 <!--How to use dividers-->
     <h2>Using Dividers</h2>
         <div>
