--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -6,9 +6,9 @@
             <style type="text/css">
                 body {
                 background: hsla(320, 72%, 76%, 0.644);
-                background-image: url(AdobeStock_355962025.jpeg);
+                background-image: url(Sylviale101.github.io/Images/AdobeStock_355962025.jpeg);
                 background-attachment: scroll;
-                background-repeat: repeat;
+                background-repeat: no-repeat;
                 font-family:Arial, Helvetica, sans-serif;
             }
             /* Adding header fonts - this is how a comment can be made*/
