Changed image link

--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -6,7 +6,7 @@
             <style type="text/css">
                 body {
                 background: hsla(320, 72%, 76%, 0.644);
-                background-image: url(Sylviale101.github.io/Images/AdobeStock_355962025.jpeg);
+                background-image: url(https://sylviale101.github.io/Images/AdobeStock_355962025.jpeg);
                 background-attachment: scroll;
                 background-repeat: no-repeat;
                 font-family:Arial, Helvetica, sans-serif;
