--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -85,6 +85,9 @@
         </p> 
         <!--Creating the body of a table-->
         <table border="1" width= "500">
+            <!--Attempting to center table-->
+            margin-left:auto;
+            margin-right:auto;
             <tbody>
                 <!--Creating rows for a table-->
                 <tr>
