--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -84,10 +84,7 @@
             </p>
         </p> 
         <!--Creating the body of a table-->
-        <table border="1" width= "500">
-                <!--Attempting to center table-->
-                margin-left:auto;
-                margin-right:auto;
+        <table border="1" width= "500" margin-left:auto; margin-right:auto;>
             <tbody>
                 <!--Creating rows for a table-->
                 <tr>
