--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -23,6 +23,9 @@
                 body {
                     text-align: center;
                 }
+                table, ol,ul {
+                    align-items: center;
+                }
             </style>
 </head>
 <body>
