--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -23,8 +23,8 @@
                 body {
                     text-align: center;
                 }
-                table, ol,ul {
-                    align-items: center;
+                td {
+                 text-align: center;
                 }
             </style>
 </head>
@@ -87,7 +87,7 @@
             </p>
         </p> 
         <!--Creating the body of a table-->
-        <table border="1" width= "500" margin-left:auto; margin-right:auto;>
+        <table border="1" width= "500">
             <tbody>
                 <!--Creating rows for a table-->
                 <tr>
