--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -23,9 +23,15 @@
                 body {
                     text-align: center;
                 }
-                td {
-                 text-align: center;
-                }
+                table, th, td {    
+                border: 1px solid black;  
+                margin-left: auto;  
+                margin-right: auto;  
+                border-collapse: collapse;    
+                width: 500px;  
+                text-align: center;  
+                font-size: 20px;  
+                }    
             </style>
 </head>
 <body>
