--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -19,10 +19,11 @@
                     text-align:center;
                     font-weight: bold; 
                 }
-                /*Attempting to align text by centering them*/
+                /*Align text to center*/
                 body {
                     text-align: center;
                 }
+                /*Centering table*/
                 table, th, td {    
                 border: 1px solid black;  
                 margin-left: auto;  
@@ -30,7 +31,7 @@
                 border-collapse: collapse;    
                 width: 500px;  
                 text-align: center;  
-                font-size: 20px;  
+                font-size: 10px;  
                 }    
             </style>
 </head>
