--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -32,7 +32,15 @@
                 width: 500px;  
                 text-align: center;  
                 font-size: 10px;  
-                }    
+                } 
+                /*Aligning bulleted list*/   
+                div.container {
+                    text-align: center;
+                }
+                ul.myUL {
+                    display: inline-block;
+                    text-align: left;
+                }
             </style>
 </head>
 <body>
