--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -34,12 +34,11 @@
                 font-size: 15px;  
                 } 
                 /*Aligning bulleted list*/   
-                div.container {
-                    text-align: center;
-                }
-                ul.myUL {
-                    display: inline-block;
-                    text-align: left;
+                ul, li, ol {
+                    text-align:center;
+                    font-size: medium;
+                    margin-left: auto;
+                    margin-right: auto;
                 }
             </style>
 </head>
