Change image link

--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -189,9 +189,9 @@
             </p>
 <hr>
         <!--Adding an Image-->
-             <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=small" width="200" alt="Feeling Comfy" title="Feeling Comfy! Credits to Suyao">
-        <h2>Credits</h2>
-            <!--Credits Section-->
+             <img src="https://pbs.twimg.com/media/FV2tnxZUEAUsFWu?format=jpg&name=small" alt="Feeling Comfy" title="Feeling Comfy! Credits to Suyao">
+                <h2>Credits</h2>
+                <!--Credits Section-->
                 <p>
                     <!--Hyperlinking a text-->
                     <b>Image Credits to:</b> <a href="https://twitter.com/sysysuyao?t=zgbOs_RJKtz9_37Cm1ddLg&s=09">Suyao</a>!
