--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -40,6 +40,9 @@
                     margin-left: auto;
                     margin-right: auto;
                 }
+                #identified {
+                    background-color: plum;
+                }
             </style>
 </head>
 <body>
@@ -66,6 +69,7 @@
         </div>
 <!--How to use dividers-->
     <h2>Using Dividers</h2>
+        <div id="identified">This div has been identified!</div>
         <div>
             When using div and ending your code with /div it leaves your sentences and paragraphs with no spaces above or below, making your text squished.
             <br>
@@ -87,8 +91,8 @@
 <!--How to Emphasize Text-->
     <h2>Emphasizing Text</h2>
         <p>
-            Being able to emphasize text is nice. By being able to do so, I can use b to bold important text like <b>this</b> or use <strong>strong</strong> instead. I could  also
-            create italic text by using an i tag like <i>this</i>
+            Being able to emphasize text is nice. By being able to do so, I can use b to bold important text like <b>this</b> or use <strong>strong</strong> instead. 
+            I could  also create italic text by using an i tag like <i>this</i>
         </p>
 <!--How to create a table-->
 <h2>Creating A Table</h2>
