Reattempt to center unordered list

--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -40,6 +40,7 @@
                     margin-left: auto;
                     margin-right: auto;
                 }
+                /*Changing id class background color*/
                 #identified {
                     background-color: plum;
                 }
@@ -153,11 +154,14 @@
                 <p>
                     <!--Changed indentation of ul list-->
                     <b>Here is an example of a unordered list below</b>
+                    <!--Identifying ul class-->
+                        <ul class = "unordered">
                         <ul>
                             <li>Apple Juice</li>
                             <li>Grape Juice</li>
                             <li> Pear Juice</li>
-                        </ul>
+                       </ul>
+                    </ul>
                 </p>
                 <h3>Note</h3>
                     <p>
