--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -44,6 +44,14 @@
                 #identified {
                     background-color: plum;
                 }
+                /*Bullet point align*/
+                div.container {
+                text-align: center;
+                }
+                ul.myUL {
+                 display: inline-block;
+                text-align: left;
+                }
             </style>
 </head>
 <body>
