--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -41,7 +41,7 @@
                 div.container {
                 text-align: center;
                 }
-                ul.myUL {
+                ul.ordered {
                  display: inline-block;
                 text-align: left;
                 }
