--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -198,7 +198,7 @@
             </p>
 <hr>
         <!--Adding an Image-->
-                <img src="feeling comfy.jfif" width="500" alt="Feeling Comfy" title="Feeling Comfy! Credits to Suyao">
+                <img src="FV2tnxZUEAUsFWu.jpg" width="500" alt="Feeling Comfy" title="Feeling Comfy! Credits to Suyao">
                 <h2>Credits</h2>
                 <!--Credits Section-->
                 <p>
