--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -193,17 +193,18 @@
             </p>
             <h3>Notes</h3>
             <p>
-                Indentation, consistantly saving and commenting while coding is an important habit to have. If I were to unindent/delete comments for my code for the table above then I could've been easily 
-                gotten confused while writing my code, and I could've lost some of my code if something were to happen.
+                Indentation, consistantly saving and commenting while coding is an important habit to have. 
+                If I were to unindent/delete comments for my code for the table above then I could've been easily 
+                gotten confused while writing my code. I could've also lost some of my code if something were to happen.
             </p>
 <hr>
         <!--Adding an Image-->
-                <img src="FV2tnxZUEAUsFWu.jpg" width="500" alt="Feeling Comfy" title="Feeling Comfy! Credits to Suyao">
+                <img src="estee-janssens-8fQ-k_Wd9yU-unsplash.jpg" width="500" alt="Studying" title="Studying! Credits to Suyao">
                 <h2>Credits</h2>
                 <!--Credits Section-->
                 <p>
                     <!--Hyperlinking a text-->
-                    <b>Image Credits to:</b> <a href="https://twitter.com/sysysuyao?t=zgbOs_RJKtz9_37Cm1ddLg&s=09">Suyao</a>!
+                    <b>Image Credits to:</b> Estée Janssens on <a href="https://unsplash.com/s/photos/study-aesthetic?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
                 </p>
                 <p>
                     <b>Code Reference Credits to:</b> <a href="https://github.com/markdangerchen">Mark Chen</a>!
