--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -199,7 +199,7 @@
             </p>
 <hr>
         <!--Adding an Image-->
-                <img src="estee-janssens-8fQ-k_Wd9yU-unsplash.jpg" width="500" alt="Studying" title="Studying! Credits to Suyao">
+                <img class="Images" src="estee-janssens-8fQ-k_Wd9yU-unsplash.jpg" alt="Studying by Estée Janssens"/>
                 <h2>Credits</h2>
                 <!--Credits Section-->
                 <p>
