Added comments + using link=

--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -6,7 +6,7 @@
             <style type="text/css">
                 body {
                 background: hsla(320, 72%, 76%, 0.644);
-                background-image: url(https://sylviale101.github.io/Images/AdobeStock_355962025.jpeg);
+                background-image: url(Sylviale101.github.io/Images/annie-spratt-zA7I5BtFbvw-unsplash.jpg);
                 background-attachment: scroll;
                 background-repeat: no-repeat;
                 font-family:Arial, Helvetica, sans-serif;
@@ -199,6 +199,7 @@
             </p>
 <hr>
         <!--Adding an Image-->
+                <!--Attempt to use class=-->
                 <img class="Images" src="estee-janssens-8fQ-k_Wd9yU-unsplash.jpg" alt="Studying by Estée Janssens"/>
                 <h2>Credits</h2>
                 <!--Credits Section-->
@@ -207,7 +208,8 @@
                     <b>Image Credits to:</b> Estée Janssens on <a href="https://unsplash.com/s/photos/study-aesthetic?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
                 </p>
                 <p>
-                    <b>Code Reference Credits to:</b> <a href="https://github.com/markdangerchen">Mark Chen</a>!
+                    <!--Attempt to use link = -->
+                    <b>Code Reference Credits to:</b> <a link="https://github.com/markdangerchen">Mark Chen</a>!
                 </p>
     </body>
 </html>
