list center attempt

--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -37,6 +37,10 @@
                 #identified {
                     background-color: plum;
                 }
+                ul, ol, li{
+                    list-style-position: inside;
+                    text-align: center;
+                }
             </style>
 </head>
 <body>
