Moved text align to main css body

--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -10,6 +10,7 @@
                 background-attachment: scroll;
                 background-repeat: no-repeat;
                 font-family:Arial, Helvetica, sans-serif;
+                text-align: center;
             }
             /* Adding header fonts - this is how a comment can be made*/
                 h1, h2, h3 {
@@ -18,10 +19,6 @@
                     font-style: italic;
                     text-align:center;
                     font-weight: bold; 
-                }
-                /*Align text to center*/
-                body {
-                    text-align: center;
                 }
                 /*Centering table*/
                 table, th, td {    
@@ -37,6 +34,7 @@
                 #identified {
                     background-color: plum;
                 }
+                /*Centering lists*/
                 ul, ol, li{
                     list-style-position: inside;
                     text-align: center;
