--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -191,7 +191,7 @@
             </p>
 <hr>
         <!--Adding an Image-->
-                <img class="Images" src="estee-janssens-8fQ-k_Wd9yU-unsplash.jpg" alt="Studying by Estée Janssens"/>
+                <img src="estee-janssens-8fQ-k_Wd9yU-unsplash.jpg" alt="Studying by Estée Janssens"/>
                 <h2>Credits</h2>
                 <!--Credits Section-->
                 <p>
