change img width

--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -190,7 +190,7 @@
             </p>
 <hr>
         <!--Adding an Image-->
-                <img src="Images/estee-janssens-8fQ-k_Wd9yU-unsplash.jpg" alt="Studying by Estée Janssens"/>
+                <img src="Images/estee-janssens-8fQ-k_Wd9yU-unsplash.jpg" width ="100" alt="Studying by Estée Janssens"/>
                 <h2>Credits</h2>
                 <!--Credits Section-->
                 <p>
