added :hover tag

--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -39,6 +39,9 @@
                     list-style-position: inside;
                     text-align: center;
                 }
+                a:hover {
+                    color:aqua;
+                }
             </style>
 </head>
 <body>
