hover color change

--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -40,7 +40,7 @@
                     text-align: center;
                 }
                 a:hover {
-                    color:aqua;
+                    color:orange;
                 }
             </style>
 </head>
