--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -39,6 +39,7 @@
                     list-style-position: inside;
                     text-align: center;
                 }
+                /*Changes colors when a link is hovered*/
                 a:hover {
                     color:orange;
                 }
@@ -193,6 +194,7 @@
             </p>
 <hr>
         <!--Adding an Image-->
+            <!--Changed link + changed width-->
                 <img src="Images/estee-janssens-8fQ-k_Wd9yU-unsplash.jpg" width ="500" alt="Studying by Estée Janssens"/>
                 <h2>Credits</h2>
                 <!--Credits Section-->
