--- a/Sylviale101-CSS.html
+++ b/Sylviale101-CSS.html
@@ -32,7 +32,9 @@
                 } 
                 /*Changing id class background color*/
                 #identified {
-                    background-color: plum;
+                    font-weight: bold;
+                    font-size: large;
+                    font-style: italic;
                 }
                 /*Centering lists*/
                 ul, ol, li{
